<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_discovery"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:state_checked="true"/>

    <!-- <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:state_checked="true"/> -->

    <item
        android:id="@+id/nav_pantry"
        android:icon="@drawable/ic_pantry"
        android:title="@string/pantry"
        android:state_checked="true"/>

    <item
        android:id="@+id/nav_insert_recipe"
        android:icon="@drawable/ic_recipe_add"
        android:title="@string/add_recipe" />


    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>