<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.RecipeInsertFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_profile"
                app:title="Add Recipe">
            </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:layout_margin="8dp">
        <!--== Single line input==-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_singleLine">

            <!--==title input==-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title:"
                    android:textSize="@dimen/input_size" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textAutoComplete"
                    android:hint="Carrot Cake"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!--=== Difficulty-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Difficulty:"
                android:textSize="@dimen/input_size"/>

                <Spinner
                    android:id="@+id/sr_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/difficulties"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <!--=== Private-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Private:"
                    android:layout_gravity="center"
                    android:textSize="@dimen/input_size"/>
                <CheckBox
                    android:id="@+id/cb_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--== Images ==-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_image"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Images:"
                    android:textSize="@dimen/input_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/ib_image1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/ic_add_photo"
                        android:background="@color/dark_grey">
                    </ImageButton>
                    <ImageButton
                        android:id="@+id/ib_image2"
                        android:layout_margin="4dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_add_photo"
                        android:background="@color/dark_grey">
                    </ImageButton>
                    <ImageButton
                        android:id="@+id/ib_image3"
                        android:layout_margin="4dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_add_photo"
                        android:background="@color/dark_grey">
                    </ImageButton>
                    <ImageButton
                        android:id="@+id/ib_image4"
                        android:layout_margin="4dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_add_photo"
                        android:background="@color/dark_grey">
                    </ImageButton>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- description -->
        <LinearLayout
            android:id="@+id/ll_desciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_singleLine"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guide:"
                android:textSize="@dimen/input_size"/>

            <EditText
                android:id="@+id/et_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write Instructions here."
                android:autofillHints=""
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minHeight="48dp"
                android:scrollbars="vertical" />

        </LinearLayout>

            <!-- submit -->
            <Button
                android:id="@+id/btn_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_desciption"
                android:text="Publish Recipe"
                android:backgroundTint="@color/sky_blue"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>