<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_recipe"
        android:icon="@drawable/ic_edit"
        android:title="Edit Recipe"
        android:checkable="true"
        app:showAsAction="always" />
</menu>