<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        android:elevation="4dp"
        app:title="@string/app_name">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:searchIcon="@drawable/ic_search"
            android:layout_gravity="end"
            app:iconifiedByDefault="true"
            app:queryHint="Apple pie. . ."
            android:layout_margin="8dp"
            android:outlineSpotShadowColor="@color/orange_light"
            android:outlineAmbientShadowColor="@color/orange_light" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipelist"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        tools:listitem="@layout/recipe_card">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
